<resources>
    <string name="app_name">eVoc</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_learn_multiplechoice">LearnMultiplechoice</string>
    <string name="title_activity_db">DB</string>
    <string name="title_activity_result">Ergebnis</string>
    <string name="title_activity_definition_list">Vokabelheft</string>
    <string name="title_activity_definition_detail">Definition</string>
    <string name="title_activity_result_list">Ergebnisse</string>

    <string name="doktorhutContentDescription">Symbol Doktorhut</string>
    <string name="baustelle">Hallo Besucher, hier entsteht eine App. Die App wird gerade vervollständigt. Bald ist diese App ein Augenschmaus mit tollen Funktionen. Bitte gedulden Sie sich noch ein wenig..</string>
    <string name="question">Frage</string>

    <string name="Antwort1dummy">Antwort 1</string>
    <string name="Antwort2dummy">Antwort 2</string>
    <string name="Antwort3dummy">Antwort 3</string>
    <string name="Antwort4dummy">Antwort 4</string>


    <string name="learning_mode">Lernmodus</string>
    <string name="time_mode">Zeitmodus</string>

    <string name="definitionDescription">Vokabelheft</string>
    <string name="dbDescription">Datenbank</string>
    <string name="learning_mode_description">In Ruhe neue Inhalte lernen</string>
    <string name="time_mode_description">Prüfe dein Wissen in einer Klausursimulation</string>

    <string name="pointsDummy">0 Punkte</string>
    <string name="roundsDummy">0/10</string>
    <string name="timeDummy">0 Sekunden</string>
    <string name="dateTimeDummy">25.10.2015 15:31</string>

    <string name="points">Punkte</string>
    <string name="seconds">Sekunden</string>

    <string name="definitionTitleDummy">WLAN</string>
    <string name="definitionContentDummy">Wireless Local Area Network [ˈwaɪəlɪs ləʊkl ˈɛəɹɪə ˈnɛtwɜːk] (deutsch wörtlich „drahtloses lokales Netzwerk“ – Wireless LAN, WLAN) bezeichnet ein lokales Funknetz, wobei meistens ein Standard der IEEE-802.11-Familie gemeint ist. Für diese engere Bedeutung wird in manchen Ländern (z. B. USA, Großbritannien, Kanada, Niederlande, Spanien, Frankreich, Italien) weitläufig beziehungsweise auch synonym der Begriff Wi-Fiverwendet. Der Begriff wird häufig auch irreführend als Synonym für WLAN-Hotspots bzw. kabellosen Internetzugriff verwendet.</string>

    <string name="quitAlert.Title">Wirklich abbrechen?</string>
    <string name="quitAlert.Content">Dein Rundenfortschritt wird nicht gespeichert.</string>
    <string name="quitAlert.yes">Ja</string>
    <string name="quitAlert.no">Nein</string>

    <string name="exitAlert.Title">Wirklich beenden?</string>
    <string name="exitAlert.Content">Damit verlässt du eVoc.</string>
    <string name="exitAlert.yes">Ja</string>
    <string name="exitAlert.no">Nein</string>


</resources>
