<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="quizzappuni.com.whs.quizzappuni.Activities.Main"
    android:background="@color/lightgreen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/textView"
        android:textColor="@color/lightwhite"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <View
        android:layout_width="150dp"
        android:layout_height="2dp"
        android:background="@color/darkgreen"
        android:id="@+id/line"
        android:layout_marginTop="9dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="212dp"
        android:id="@+id/doktorhut"
        android:src="@drawable/kappehome"
        android:layout_below="@+id/line"
        android:layout_centerHorizontal="true"
        android:baselineAlignBottom="false"
        android:contentDescription="@string/doktorhutContentDescription" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65dp"
        android:layout_marginBottom="147dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/dbButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_trophy_variant_white_48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="fitCenter"
            />

        <TextView
            android:id="@+id/dbDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_result_list"
            android:gravity="center_horizontal"
            android:textColor="@color/lightwhite"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="8dp"
            android:layout_alignParentBottom="true"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="65dp"
        android:layout_marginBottom="147dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_alignParentRight="true">

        <ImageButton
            android:id="@+id/definitionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_view_list_white_48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="fitCenter"
            />

        <TextView
            android:id="@+id/definitionDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/definitionDescription"
            android:gravity="center_horizontal"
            android:textColor="@color/lightwhite"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="8dp"
            android:layout_alignParentBottom="true"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:id="@+id/linearLayout">

        <android.support.v7.widget.CardView
            android:id="@+id/status_card"
            android:background="@color/lightwhite"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:gravity="bottom">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/play_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/learning_mode"
                    android:gravity="left"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="56dp"
                    android:layout_marginTop="18dp"
                    android:textColor="@color/cardview_dark_background"/>

                <TextView
                    android:id="@+id/play_mode_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/learning_mode_description"
                    android:gravity="left"
                    android:textSize="12sp"
                    android:layout_marginLeft="56dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-light"
                    android:layout_below="@+id/play_mode"/>

            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:id="@+id/linearLayout2">

        <android.support.design.widget.FloatingActionButton
            xmlns:app="http://schemas.android.com/apk/res-auto?"
            app:borderWidth="0dp"
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_marginBottom="54dp"
            android:src="@drawable/ic_play_arrow_white_24dp" />

    </LinearLayout>
</RelativeLayout>
