<?xml version="1.0" encoding="utf-8"?>


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="?attr/selectableItemBackground"
        android:clickable="true">

        <TextView
            android:id="@+id/datetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif"
            android:textSize="16sp"
            android:text="@string/dateTimeDummy"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_trophy_variant_grey600_24dp"/>

            <TextView
                android:id="@+id/result_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginLeft="8dp"
                android:textColor="@android:color/black"
                android:alpha="0.6"
                android:fontFamily="sans-serif"
                android:textSize="14sp"
                android:text="@string/pointsDummy"/>

            <ImageView
                android:id="@+id/timer_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_timer_black_24dp"
                android:alpha="0.6"
                android:layout_marginLeft="8dp"/>

            <TextView
                android:id="@+id/result_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginLeft="8dp"
                android:textColor="@android:color/black"
                android:alpha="0.6"
                android:fontFamily="sans-serif"
                android:textSize="14sp"
                android:text="@string/timeDummy"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

    </LinearLayout>