<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey300"
    >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/main.appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">


            <android.support.v7.widget.Toolbar
                android:id="@+id/main.toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/question"
                android:id="@+id/question"
                android:paddingLeft="60dp"
                android:paddingRight="10dp"
                android:layout_marginTop="-44dp"
                android:paddingBottom="8dp"
                android:textColor="@color/lightwhite" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:fillViewport="true"
        android:layout_gravity="fill_vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentTop="true">

                <ToggleButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Antwort1dummy"
                    android:textOn="@string/Antwort1dummy"
                    android:textOff="@string/Antwort1dummy"
                    android:id="@+id/Antwort1"
                    android:background="@drawable/multiple_choice_toggle_colors"
                    android:textColor="@color/multiple_choice_toggle_text_colors"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"/>

                <ToggleButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Antwort2dummy"
                    android:textOn="@string/Antwort2dummy"
                    android:textOff="@string/Antwort2dummy"
                    android:id="@+id/Antwort2"
                    android:background="@drawable/multiple_choice_toggle_colors"
                    android:textColor="@color/multiple_choice_toggle_text_colors"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_below="@+id/Antwort1"/>

                <ToggleButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Antwort3dummy"
                    android:textOn="@string/Antwort3dummy"
                    android:textOff="@string/Antwort3dummy"
                    android:id="@+id/Antwort3"
                    android:background="@drawable/multiple_choice_toggle_colors"
                    android:textColor="@color/multiple_choice_toggle_text_colors"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_below="@+id/Antwort2"/>

                <ToggleButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Antwort4dummy"
                    android:textOn="@string/Antwort4dummy"
                    android:textOff="@string/Antwort4dummy"
                    android:id="@+id/Antwort4"
                    android:background="@drawable/multiple_choice_toggle_colors"
                    android:textColor="@color/multiple_choice_toggle_text_colors"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_below="@+id/Antwort3"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentBottom="true"
                android:gravity="bottom">

                <android.support.v7.widget.CardView
                    android:id="@+id/statusCard"
                    android:background="@color/lightwhite"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_alignParentBottom="true"
                    android:gravity="bottom">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ProgressBar
                            android:id="@+id/progressBar"
                            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="4dp"/>
                        <TextView
                            android:id="@+id/play_mode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/learning_mode"
                            android:gravity="left"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:textColor="@color/cardview_dark_background"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="18dp"/>

                        <TextView
                            android:id="@+id/round_status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/roundsDummy"
                            android:gravity="left"
                            android:textSize="12sp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="5dp"
                            android:fontFamily="sans-serif-light"
                            android:layout_below="@+id/play_mode"/>

                        <TextView
                            android:id="@+id/points"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pointsDummy"
                            android:gravity="left"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:textColor="@color/cardview_dark_background"
                            android:layout_marginRight="18dp"
                            android:layout_marginTop="28dp"
                            android:layout_alignParentRight="true"/>

                    </RelativeLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentBottom="true">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fabSend"
                    app:borderWidth="0dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="@dimen/fab_margin"
                    android:layout_marginBottom="54dp"
                    android:src="@drawable/ic_check_white_24dp" />
            </LinearLayout>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>

